# nyc-taxi-mlops

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ml_playbook.md
notebooks/: nyc_taxi_make_dataset_exploration.ipynb  train_mlflow.ipynb
scripts/: run_mlflow_server.sh
src/nyc_taxi_mlops/data/: make_dataset.py  standard_data_split.py
src/nyc_taxi_mlops/features/: build_features.py
src/nyc_taxi_mlops/models/: registry.py  train.py  tune.py
